Fix line wrap for Webkit-based browsers

--- a/docs/stylesheets/tinkerpop.scss
+++ b/docs/stylesheets/tinkerpop.scss
@@ -9,6 +9,7 @@
 .listingblock code {
   white-space: pre;
   overflow: auto;
+  overflow-wrap: normal; /* needed for webkit browsers */
 }
 
 h4 {
